tests/blackbox_tests/po4a-xml-malformed.pot
# E: malformed-xml msgid 'A quick brown <b>fox<b> jumps over the lazy dog.': asynchronous entity: line 1, column 48

#, fuzzy
msgid ""
msgstr ""
"Project-Id-Version: Gizmo Enhancer 1.0\n"
"Report-Msgid-Bugs-To: gizmoenhancer@jwilk.net\n"
"POT-Creation-Date: 2012-11-01 14:42+0100\n"
"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
"Language-Team: LANGUAGE <LL@li.org>\n"
"Language: \n"
"MIME-Version: 1.0\n"
"Content-Type: text/plain; charset=UTF-8\n"
"Content-Transfer-Encoding: 8bit\n"

#. type: Content of: <refentry><refsection><para>
msgid "A quick brown <b>fox<b> jumps over the lazy dog."
msgstr ""
